# qt4-exr-plugin

./: CMakeLists.txt  LICENSE  README.md
lib/: FindOpenEXR.cmake
src/: CMakeLists.txt  exr_handler.cpp  exr_handler.h  exr_io.cpp  exr_io.h  exr_plugin.cpp  exr_plugin.h
